# controller_toolbox

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Doxyfile  README.md  bug_report.md  compile.bat  environment.yml  temp.py  tune_controllers.cpp
.github/workflows/: ci.yml  cmake-multi-platform.yml  docker  docs
archieved/: bench_controllers.cpp  temp.py
benchmarks/: CMakeLists.txt  bench_controllers.cpp
case-study/: CMakeLists.txt  boiler_control.txt  boiler_turbine_case_study.cpp  verdict_boiler_turbine.md
cheatsheet/: advanced_model_estimation.md  control_design_pipeline.md  controller-tuning-reference.md  controller_categories.md  controller_list.md  model_evaluation.md  system_identification.md  tuning_methods.md
cheatsheet/system_identification/: armax.md  fopdt.md  n4sid.md
docs/: DEPLOYMENT.md  DOCUMENTATION.md
examples/: CMakeLists.txt  ex01_tf_pid.cpp  ex02_ss_lqr.cpp  ex03_tf_to_ss_mpc.cpp  ex04_esc_minimum.cpp  ex05_smith_predictor.cpp  ex06_lead_lag.cpp  ex07_lqg_kalman.cpp  ex08_smc.cpp  ex09_adrc.cpp  ex10_supervisory_stack.cpp  ex11_additive_stack.cpp  ex12_weighted_stack.cpp  ex13_pid_antiwindup.cpp  ex14_smc_chattering.cpp  ex15_esc_moving_minimum.cpp  ex16_adrc_time_varying.cpp  ex17_kalman_filter_standalone.cpp  ex18_mpc_disturbances.cpp  ex19_lqr_pole_placement.cpp  ex20_system_identification_data.cpp  ex22_full_pipeline_robustness.cpp  example_pid_feedback.cpp
examples/cpp/: fuzzy_performance.h  mimo_known.cpp  mimo_plant.h  mimo_unknown.cpp  siso_coupled.cpp  siso_unknown.cpp
examples/data/: mimo_prbs.csv  siso_prbs.csv
examples/python/: environment.yml  ex01_plant_construction.py  ex02_step_response.py  ex03_prbs_excitation.py  ex04_chirp_frequency_response.py  ex05_noisy_data_and_snr.py  ex06_multi_sine_excitation.py  ex07_batch_data_csv.py  ex08_pid_closed_loop.py  ex09_pid_antiwindup.py  ex10_imc_pid_tuning.py  ex11_relay_ziegler_nichols.py  ex12_cohen_coon_tuning.py  ex13_lqr_bryson.py  ex14_kalman_filter.py  ex15_lqg_closed_loop.py  ex16_mpc_horizon_tuning.py  ex17_mpc_vs_pid.py  ex18_leadlag_loop_shaping.py  ex19_smc_sliding_surface.py  ex20_adrc_eso_estimation.py  ex21_extremum_seeking.py  ex22_smith_predictor.py  ex23_controller_stack.py  ex24_disturbance_rejection.py  ex25_rls_online_identification.py  ex26_tuner_suite_soft_warnings.py  ex27_nelder_mead_ise.py  ex28_itae_vs_ise_optimisation.py  ex29_csv_alignment_verification.py  ex30_monte_carlo_robustness.py  ex31_frequency_analysis.py  ex32_phase_portrait.py  ex33_performance_dashboard.py  ex34_arx_to_ss_pipeline.py  ex35_full_pipeline.py  generate_mimo_data.py  generate_unknown_data.py
examples/python/utils/: __init__.py  controllers.py  data_gen.py  plant.py  verify.py
lib/: AtomicParamBuffer.h  CMakeLists.txt  ControllerStack.cpp  ControllerStack.h  ControllerToolbox.h  ControllerTraits.h  ControllerTuner.cpp  ControllerTuner.h  DiscreteADRC.cpp  DiscreteADRC.h  DiscreteLQG.cpp  DiscreteLQG.h  DiscreteLQR.cpp  DiscreteLQR.h  DiscreteLeadLag.cpp  DiscreteLeadLag.h  DiscreteMPC.cpp  DiscreteMPC.h  DiscretePID.cpp  DiscretePID.h  DiscreteSMC.cpp  DiscreteSMC.h  ExtremumSeeker.cpp  ExtremumSeeker.h  IController.h  KalmanFilter.cpp  KalmanFilter.h  MetricsAnalyzer.cpp  MetricsAnalyzer.h  PlantModel.cpp  PlantModel.h  SmithPredictor.cpp  SmithPredictor.h  SystemAnalysis.cpp  SystemAnalysis.h  TunerSuite.cpp  TunerSuite.h
lib/hal/: HAL.h  IActuator.h  ISensor.h  SimActuator.h  SimPlant.cpp  SimPlant.h  SimSensor.h
scripts/: CMakeLists.txt  create_controller.py  deploy.py  generate_test_data.py  realtime_all.cpp  simulate_all.cpp  tune_all.cpp  visualize.py
tests/: CMakeLists.txt  test_controllers.cpp  test_framework.h  test_integration.cpp  test_tuners_extended.cpp
tests/data/: step_response.csv
