cmake_minimum_required(VERSION 3.16)
project(ControllerToolbox CXX)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(lib)
add_subdirectory(examples)
add_subdirectory(tests)
add_subdirectory(scripts)
add_subdirectory(case-study)
add_subdirectory(benchmarks)

# Optional: generate Doxygen HTML docs with  cmake --build build --target docs
find_package(Doxygen QUIET)
if(DOXYGEN_FOUND)
    add_custom_target(docs
        COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Doxyfile
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        COMMENT "Generating API documentation with Doxygen"
        VERBATIM
    )
endif()