cmake_minimum_required(VERSION 3.16)

function(add_example NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_link_libraries(${NAME} PRIVATE controller_toolbox)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
endfunction()

add_example(ex01_tf_pid)
add_example(ex02_ss_lqr)
add_example(ex03_tf_to_ss_mpc)
add_example(ex04_esc_minimum)
add_example(ex05_smith_predictor)
add_example(ex06_lead_lag)
add_example(ex07_lqg_kalman)
add_example(ex08_smc)
add_example(ex09_adrc)
add_example(ex10_supervisory_stack)
add_example(ex11_additive_stack)
add_example(ex12_weighted_stack)
add_example(ex13_pid_antiwindup)
add_example(ex14_smc_chattering)
add_example(ex15_esc_moving_minimum)
add_example(ex16_adrc_time_varying)
add_example(ex17_kalman_filter_standalone)
add_example(ex18_mpc_disturbances)
add_example(ex19_lqr_pole_placement)
add_example(ex20_system_identification_data)
add_example(ex21_boiler_turbine_case_study)
add_example(ex22_full_pipeline_robustness)
add_example(example_pid_feedback)

# MIMO / advanced examples (cpp/ subdirectory)
function(add_cpp_example NAME)
    add_executable(${NAME} cpp/${NAME}.cpp)
    target_link_libraries(${NAME} PRIVATE controller_toolbox)
    target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpp)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
endfunction()

add_cpp_example(mimo_known)
add_cpp_example(mimo_unknown)
add_cpp_example(siso_coupled)
add_cpp_example(siso_unknown)
